# python-project-sandbox

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  README.md  TESTING.md  TESTMON_ANALYSIS_AND_FIX_PLAN.md  justfile  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  zensical.toml
.github/: action.yml  actionlint.yml  check_exclude_testmon.py  dependabot.yml  poetry-dependabot.yml  process_json.py  send_payload.py  test_cache_version_incremental.yml
ci/: run_git_tag_base_pyproject.py  update_pyproject_version.py
css/: style.css
docs/: 404.html  ci.md  getting-started.md  index.html  index.md  reports.md  search.json  sitemap.xml
project_a/: config.toml
pytest-cov-report_macos-13_python_3.11/: class_index.html  function_index.html  index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_macos-13_python_3.12/: class_index.html  function_index.html  index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_macos-latest_python_3.11/: class_index.html  function_index.html  index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_macos-latest_python_3.12/: class_index.html  function_index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_macos-latest_python_3.13/: class_index.html  function_index.html  status.json  z_1c4a7dd5eb44a3dc___init___py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_ubuntu-latest_python_3.11/: class_index.html  function_index.html  index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_ubuntu-latest_python_3.12/: class_index.html  function_index.html  index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_ubuntu-latest_python_3.13/: status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_a0bbc743cc1b9e89___init___py.html
pytest-cov-report_windows-latest_python_3.11/: class_index.html  function_index.html  index.html  status.json  z_540aa5087e7f03a7___init___py.html  z_540aa5087e7f03a7_operations_py.html  z_87efa439e608afe3___init___py.html  z_87efa439e608afe3_config_loader_py.html  (+9 more)
(+612 files in other folders)
